<resources>
    <string name="app_name">AstroCoin</string>
    <string name="recover">Recover</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">Enter password</string>
    <string name="hello_guest">Hello, Guest</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">confirm password</string>
    <string name="current_password">Current password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="enter_new_password_for_your_account">Enter new password for your account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_password">Create password</string>
    <string name="repat_password">Repat password</string>
    <string name="title_activity_sample">Sample</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_0_asc">0 ASC</string>
    <string name="transfers">Transfers</string>
    <string name="orders">Orders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer">Transfer</string>
    <string name="connect">Connect</string>
    <string name="student_ranks">Student Ranks</string>
    <string name="astrum_store">Astrum Store</string>
    <string name="change_password">Change password</string>
    <string name="app_password">App password</string>
    <string name="log_out">Log Out</string>
    <string name="search_user">Search User</string>
    <string name="settings">Settings</string>
    <string name="recieve">Receive</string>
    <string name="wallet_address">Wallet address</string>
    <string name="share">Share</string>
    <string name="astrocoin">astrocoin</string>
    <string name="send">Send</string>
    <string name="comment">Comment</string>
    <string name="flash_on">Flash on</string>
    <string name="flash_off">Flash off</string>
    <string name="date_and_time">Date and time</string>
    <string name="receiver_s_name">Receiver`s Name</string>
    <string name="receiver_s_wallet">Receiver\'s wallet</string>
    <string name="status">Status</string>
    <string name="service">Service</string>
    <string name="send_coin">Send Coin</string>
    <string name="submit">Submit</string>
    <string name="your_password">Your password</string>
    <string name="coPi">copy wallet id</string>
    <string name="blocked">User blocked</string>
    <string name="qwasar">qwasar</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="yes">Yes</string>
</resources>