<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Password">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_60"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pasvallet"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <TextView
        android:id="@+id/txtlog_getname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_guest"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_25"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txtlog_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/dp_35"
        android:layout_height="@dimen/dp_45"
        android:background="@drawable/backedittext"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/dp_35"
        android:layout_height="@dimen/dp_45"
        android:background="@drawable/backedittext"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <View
        android:id="@+id/view3"
        android:layout_width="@dimen/dp_35"
        android:layout_height="@dimen/dp_45"
        android:background="@drawable/backedittext"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <View
        android:id="@+id/view4"
        android:layout_width="@dimen/dp_35"
        android:layout_height="@dimen/dp_45"
        android:background="@drawable/backedittext"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline16"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <View
        android:id="@+id/viewlog_one"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_15"
        android:background="@drawable/passsign"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <View
        android:id="@+id/viewlog_two"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_15"
        android:background="@drawable/passsign"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <View
        android:id="@+id/viewlog_three"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_15"
        android:background="@drawable/passsign"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <View
        android:id="@+id/viewlog_four"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_15"
        android:background="@drawable/passsign"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.375" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <TextView
        android:id="@+id/txtlog_pas1"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_55"
        android:gravity="center"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_30"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txtlog_pas2"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_55"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/_2"
        android:textSize="@dimen/dp_30"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txtlog_pas3"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_55"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/_3"
        android:textSize="@dimen/dp_30"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline17"
        app:layout_constraintVertical_bias="0.515"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txtlog_pas4"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_55"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/_4"
        android:textSize="@dimen/dp_30"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txtlog_pas5"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_55"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/_5"
        android:textSize="@dimen/dp_30"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txtlog_pas6"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_55"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/_6"
        android:textSize="@dimen/dp_30"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline18"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txtlog_pas7"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_55"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/_7"
        android:textSize="@dimen/dp_30"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline19"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txtlog_pas8"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_55"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/_8"
        android:textSize="@dimen/dp_30"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline19"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txtlog_pas9"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_55"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/_9"
        android:textSize="@dimen/dp_30"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline19"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/txtlog_pas0"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_55"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="@dimen/dp_30"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        tools:ignore="SpUsage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <ImageView
        android:id="@+id/imglog_finger"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_45"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:srcCompat="@drawable/fingeticon"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imglog_back"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_45"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:srcCompat="@drawable/passback"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtlog_forgatpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline21"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>